--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
 
     volumes:
       - postgres-data:/var/lib/postgresql/data
+      
     env_file:
       - ".env"
     ports:
@@ -15,6 +16,9 @@ services:
       context: .
       dockerfile: Dockerfile
     command: "make run"
+    volumes:
+      - "./backtests/:/app/backtests"
+      - "./models/:/app/models"
     restart: always
     env_file:
       - .env
